cluster/apps/media/transmission/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-rfc1918-ips@kubernetescrd"
    hajimari.io/enable: "true"
    hajimari.io/group: "Media"
    hajimari.io/icon: "mdi:cloud-download"
spec:
  ingressClassName: "traefik"
  rules:
    - host: &host "${GATUS_SUBDOMAIN}.home.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: transmission-transmission-openvpn
                port:
                  number: 80
  tls:
    - hosts:
        - *host
      secretName: "wildcard-internal-${SECRET_DOMAIN/./-}-tls"
